Fixed onShrink
Moved the profile component files for posts to the profile page comps folder. Reworked the onShrink for viewing post details in the profile page which still covers the buttons but these buttons shouldn't be used during post details anyway. Removed pink background

--- a/quote3/src/components/posts/post_board.module.css
+++ b/quote3/src/components/posts/post_board.module.css
@@ -22,7 +22,6 @@
 
 .postsList {
   overflow: hidden;
-  background-color: pink;
 }
 
 .resultContainer {
